# zela-demo

./: Cargo.toml  README.md  run-procedure.sh  shell.nix
.github/workflows/: upload-wasm.yml
accounts/: Cargo.toml
accounts/src/: lib.rs
tx_landing/: Cargo.toml
tx_landing/src/: lib.rs
tx_landing2/: Cargo.toml
tx_landing2/src/: lib.rs
tx_landing3/: Cargo.toml
tx_landing3/src/: lib.rs
